# api

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  buf.gen.yaml  buf.yaml
.github/workflows/: dry-run-rust-build.yaml  pull-request.yaml  push.yaml  tag-creation.yaml
api/models/: Auth.proto  CommonModels.proto  Dataset.proto  ObjectModels.proto  Projects.proto
api/models/v1/: auth.proto  common_models.proto  dataset.proto  object_models.proto  projects.proto
api/services/: DatasetObjectService.proto  DatasetObjectServiceModels.proto  DatasetService.proto  DatasetServiceModels.proto  ObjectLoad.proto  ObjectLoadModels.proto  ProjectService.proto  ProjectServiceModels.proto
api/services/v1/: dataset_object_service.proto  dataset_object_service_models.proto  dataset_service.proto  dataset_service_models.proto  metadata_query_service.proto  metadata_query_service_models.proto  notification_service.proto  notification_service_models.proto  object_load.proto  object_load_models.proto  project_service.proto  project_service_models.proto
app/webhooks/v1/: notifications.proto
aruna/api/health/v2/: health.proto
aruna/api/internal/: internal.proto
aruna/api/internal/v1/: authorize.proto  bundler.proto  notification.proto  proxy.proto
aruna/api/protoc-gen-openapiv2/options/: annotations.proto  openapiv2.proto
internal/webhooks/v1/: notifications.proto
protoc/gateway/options/: annotations.proto
tests/: build.rs
v3/: group_service.proto  models.proto  realm_service.proto  resource_service.proto  user_service.proto
(+72 files in other folders)
