[package]
authors = ["Sebastian Beyvers <sebastian.beyvers@computational.bio.uni-giessen.de>"]
description = "Tests building the Rust grpc stubs for ArunaAPI"
edition = "2021"
name = "aruna_api_buildtests"
version = "2.0.0"

[[bin]]
name = "aruna_api_buildtests"
path = "./tests/build.rs"

[dependencies]
bytes = "1.5.0"
tonic = "0.10.2"
prost = "0.12.1"
tonic-build = "0.10.2"
uuid = "1.5.0"
